Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23
* Add versioned part on covered_elements
* Move extra_data of contract.option in contract module

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Manage flat extra_premium

Version 1.2 - 2014-07-01
* Changelog file creation