@@ -1,3 +1,5 @@
+* Create future extra premiums right from the creation wizard
+
 Version 1.8 - 2016-07-06
 
 Version 1.6 - 2015-12-23
